# shapedrop

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  board.cpp  board.hpp  core.cpp  core.hpp  draw.cpp  draw.hpp  jint.h  main.cpp  makefile  platform.hpp  readme.md  sdlmain.cpp  sdlmain.hpp  shape.cpp  shape.hpp  shell.nix  util.hpp
src/: board.cpp  board.hpp  core.cpp  core.hpp  draw.cpp  draw.hpp  draw_opengl.cpp  draw_opengl.hpp  draw_software.cpp  draw_software.hpp  font.cpp  font.hpp  input.cpp  input.hpp  jint.h  platform.hpp  rangealgorithms.hpp  shape.cpp  shape.hpp  simulate.cpp  simulate.hpp  tests.cpp  tests.hpp  ui.cpp  ui.hpp  util.hpp
src/platform/: sdlmain.cpp  sdlmain.hpp
